[package]
name = "poemcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.8.22"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
poem-mcpserver = {version = "0.1.8", features = ["sse"] }
poem = "3.1.8"
ping = "0.5.2"
